# SIALG_G4

./: CMakeLists.txt  SourceSetup.sh  TestCell.cc  vis.mac
include/: ActionInitialization.hh  DetectorGeometry.hh  EventAction.hh  Generator.hh  PhysicsList.hh  RunAction.hh  SipmArray.hh  SteppingAction.hh
source/: ActionInitialization.cc  DetectorGeometry.cc  EventAction.cc  Generator.cc  PhysicsList.cc  RunAction.cc  SipmArray.cc  SteppingAction.cc
